--- a/deploy_tools/gunicorn-ec2-54-83-146-250.compute-1.amazonaws.com.service
+++ b/deploy_tools/gunicorn-ec2-54-83-146-250.compute-1.amazonaws.com.service
@@ -4,10 +4,10 @@ Description=Gunicorn server for DOMAIN
 [Service]
 Restart=on-failure
 User=ubuntu
-WorkingDirectory=/home/ubuntu/sites/ec2-174-129-129-133.compute-1.amazonaws.com
-EnvironmentFile=/home/ubuntu/sites/ec2-174-129-129-133.compute-1.amazonaws.com/.env
+WorkingDirectory=/home/ubuntu/sites/DOMAIN
+EnvironmentFile=/home/ubuntu/sites/DOMAIN/.env
 
-ExecStart=/home/ubuntu/sites/ec2-174-129-129-133.compute-1.amazonaws.com/vir_env/bin/gunicorn \
+ExecStart=/home/ubuntu/sites/DOMAIN/vir_env/bin/gunicorn \
     --bind unix:/tmp/DOMAIN.socket \
     superlists.wsgi:application
 
