--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -3,7 +3,7 @@ server {
     server_name DOMAIN;
 
     location /static {
-        alias /home/ubuntu/sites/ec2-174-129-129-133.compute-1.amazonaws.com/static;
+        alias /home/ubuntu/sites/DOMAIN/static;
     }
 
     location / {
